Gain: $ -42.03 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB1_CS1
Gain: $ -42.03 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB1_CS1_RV
Gain: $ -26.59 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB1_CS1_IR5
Gain: $ -4.63 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB1_CS1_TR
Gain: $ -1.35 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB1_CS1_AV
Gain: $ 0.58 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB1_CS1_VI
Gain: $ 0.62 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB1_CS1_AL
Gain: $ 0.4 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB1_CS1_LI
Gain: $ -67.42 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB1_CS1_QP
Gain: $ -1.03 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB1_CS1_HM
Gain: $ -0.53 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB1_CS1_SS
Gain: $ -0.53 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB1_CS1_QL
Gain: $ -0.53 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB1_CS1_DB30
Gain: $ -0.92 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB1_CS1_TR_IR5
Gain: $ -2.33 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB1_CS1_TR_QP
Gain: $ -37.81 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB1_CS1_QP_IR5
Gain: $ -0.35 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB1_CS1_RV_TR
Gain: $ 0 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB1_CS1_RV_TR_DB
Gain: $ -1.99 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB1_CS1_RV_AV
Gain: $ 0.62 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB1_CS1_RV_AL
Gain: $ -67.42 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB1_CS1_RV_QP
Gain: $ -4.84 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB1_CS1_HM_TR
Gain: $ -2.24 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB1_CS1_HM_AV
Gain: $ -67.42 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB1_CS1_HM_QP
Gain: $ 0.74 Win %: 100.00 in 1 days with algo TB5_CC_QM_OB5_OS5_CB3_CS3_RV
Gain: $ -1.07 Win %: 0 in 1 days with algo TB5_CC_QM_OB5_OS5_CB3_CS3_IR5
Gain: $ -0.02 Win %: 0 in 1 days with algo TB5_CC_QM_OB5_OS5_CB3_CS3_TR
Gain: $ -0.02 Win %: 0 in 1 days with algo TB5_CC_QM_OB5_OS5_CB3_CS3_AV
Gain: $ -0.02 Win %: 0 in 1 days with algo TB5_CC_QM_OB5_OS5_CB3_CS3_VI
Gain: $ -0.02 Win %: 0 in 1 days with algo TB5_CC_QM_OB5_OS5_CB3_CS3_AL
Gain: $ -0.15 Win %: 0 in 1 days with algo TB5_CC_QM_OB5_OS5_CB3_CS3_LI
Gain: $ -2.43 Win %: 0 in 1 days with algo TB5_CC_QM_OB5_OS5_CB3_CS3_QP
Gain: $ -0.02 Win %: 0 in 1 days with algo TB5_CC_QM_OB5_OS5_CB3_CS3_HM
Gain: $ -0.02 Win %: 0 in 1 days with algo TB5_CC_QM_OB5_OS5_CB3_CS3_SS
Gain: $ -0.02 Win %: 0 in 1 days with algo TB5_CC_QM_OB5_OS5_CB3_CS3_QL
Gain: $ -0.02 Win %: 0 in 1 days with algo TB5_CC_QM_OB5_OS5_CB3_CS3_DB6
Gain: $ -0.89 Win %: 0 in 1 days with algo TB5_CC_QM_OB5_OS5_CB3_CS3_TR_IR5
Gain: $ -2.43 Win %: 0 in 1 days with algo TB5_CC_QM_OB5_OS5_CB3_CS3_TR_QP
Gain: $ -2.33 Win %: 0 in 1 days with algo TB5_CC_QM_OB5_OS5_CB3_CS3_QP_IR5
Gain: $ -2.33 Win %: 0 in 1 days with algo TB5_CC_QM_OB5_OS5_CB3_CS3_RV_TR
Gain: $ 0 Win %: 100.00 in 1 days with algo TB5_CC_QM_OB5_OS5_CB3_CS3_RV_TR_DB
Gain: $ -1.94 Win %: 0 in 1 days with algo TB5_CC_QM_OB5_OS5_CB3_CS3_RV_AV
Gain: $ 0.48 Win %: 100.00 in 1 days with algo TB5_CC_QM_OB5_OS5_CB3_CS3_RV_AL
Gain: $ -1.79 Win %: 0 in 1 days with algo TB5_CC_QM_OB5_OS5_CB3_CS3_RV_QP
Gain: $ -2.48 Win %: 0 in 1 days with algo TB5_CC_QM_OB5_OS5_CB3_CS3_HM_TR
Gain: $ -0.02 Win %: 0 in 1 days with algo TB5_CC_QM_OB5_OS5_CB3_CS3_HM_AV
Gain: $ -2.43 Win %: 0 in 1 days with algo TB5_CC_QM_OB5_OS5_CB3_CS3_HM_QP
Gain: $ -0.3 Win %: 0 in 1 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_RV
Gain: $ -15.19 Win %: 0 in 1 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_IR5
Gain: $ -3.42 Win %: 0 in 1 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_TR
Gain: $ -4.41 Win %: 0 in 1 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_AV
Gain: $ 0.35 Win %: 100.00 in 1 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_VI
Gain: $ -8.97 Win %: 0 in 1 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_AL
Gain: $ 0.31 Win %: 100.00 in 1 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_LI
Gain: $ -23.49 Win %: 0 in 1 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_QP
Gain: $ 0.5 Win %: 100.00 in 1 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_HM
Gain: $ -4.85 Win %: 0 in 1 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_SS
Gain: $ -0.36 Win %: 0 in 1 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_QL
Gain: $ 0.5 Win %: 100.00 in 1 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_DB8
Gain: $ -4.11 Win %: 0 in 1 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_TR_IR5
Gain: $ -5.92 Win %: 0 in 1 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_TR_QP
Gain: $ -18.53 Win %: 0 in 1 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_QP_IR5
Gain: $ -3.25 Win %: 0 in 1 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_RV_TR
Gain: $ 0 Win %: 100.00 in 1 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_RV_TR_DB
Gain: $ -3.64 Win %: 0 in 1 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_RV_AV
Gain: $ -9.08 Win %: 0 in 1 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_RV_AL
Gain: $ -23.68 Win %: 0 in 1 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_RV_QP
Gain: $ -3.42 Win %: 0 in 1 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_HM_TR
Gain: $ -4.41 Win %: 0 in 1 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_HM_AV
Gain: $ -23.49 Win %: 0 in 1 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_HM_QP
Gain: $ -4.39 Win %: 0 in 1 days with algo TB2_HL_QM_OB4_OS4_CB1_CS1_RV
Gain: $ -6.51 Win %: 0 in 1 days with algo TB2_HL_QM_OB4_OS4_CB1_CS1_IR5
Gain: $ -2.84 Win %: 0 in 1 days with algo TB2_HL_QM_OB4_OS4_CB1_CS1_TR
Gain: $ -1.13 Win %: 0 in 1 days with algo TB2_HL_QM_OB4_OS4_CB1_CS1_AV
Gain: $ -0.95 Win %: 0 in 1 days with algo TB2_HL_QM_OB4_OS4_CB1_CS1_VI
Gain: $ -3.08 Win %: 0 in 1 days with algo TB2_HL_QM_OB4_OS4_CB1_CS1_AL
Gain: $ -4.8 Win %: 0 in 1 days with algo TB2_HL_QM_OB4_OS4_CB1_CS1_LI
Gain: $ -12.96 Win %: 0 in 1 days with algo TB2_HL_QM_OB4_OS4_CB1_CS1_QP
Gain: $ 0.5 Win %: 100.00 in 1 days with algo TB2_HL_QM_OB4_OS4_CB1_CS1_HM
Gain: $ -4.95 Win %: 0 in 1 days with algo TB2_HL_QM_OB4_OS4_CB1_CS1_SS
Gain: $ 0.5 Win %: 100.00 in 1 days with algo TB2_HL_QM_OB4_OS4_CB1_CS1_QL
Gain: $ 0.5 Win %: 100.00 in 1 days with algo TB2_HL_QM_OB4_OS4_CB1_CS1_DB15
Gain: $ -3.43 Win %: 0 in 1 days with algo TB2_HL_QM_OB4_OS4_CB1_CS1_TR_IR5
Gain: $ -2.43 Win %: 0 in 1 days with algo TB2_HL_QM_OB4_OS4_CB1_CS1_TR_QP
Gain: $ -11.44 Win %: 0 in 1 days with algo TB2_HL_QM_OB4_OS4_CB1_CS1_QP_IR5
Gain: $ -3.31 Win %: 0 in 1 days with algo TB2_HL_QM_OB4_OS4_CB1_CS1_RV_TR
Gain: $ 0 Win %: 100.00 in 1 days with algo TB2_HL_QM_OB4_OS4_CB1_CS1_RV_TR_DB
Gain: $ -2.33 Win %: 0 in 1 days with algo TB2_HL_QM_OB4_OS4_CB1_CS1_RV_AV
Gain: $ -3.57 Win %: 0 in 1 days with algo TB2_HL_QM_OB4_OS4_CB1_CS1_RV_AL
Gain: $ -13.33 Win %: 0 in 1 days with algo TB2_HL_QM_OB4_OS4_CB1_CS1_RV_QP
Gain: $ -2.84 Win %: 0 in 1 days with algo TB2_HL_QM_OB4_OS4_CB1_CS1_HM_TR
Gain: $ -1.13 Win %: 0 in 1 days with algo TB2_HL_QM_OB4_OS4_CB1_CS1_HM_AV
Gain: $ -0.02 Win %: 0 in 1 days with algo TB2_HL_QM_OB4_OS4_CB1_CS1_HM_QP
Gain: $ -0.02 Win %: 0 in 1 days with algo TB2_HL_QM_OB4_OS4_CB1_CS1_HM_QP
Gain: $ -24.67 Win %: 0 in 2 days with algo TB1_PL_QM_OB4_OS4_CB3_CS3
Gain: $ -24.67 Win %: 0 in 2 days with algo TB1_PL_QM_OB4_OS4_CB3_CS3_RV
Gain: $ -27.27 Win %: 0 in 2 days with algo TB1_PL_QM_OB4_OS4_CB3_CS3_IR5
Gain: $ -6.54 Win %: 0 in 2 days with algo TB1_PL_QM_OB4_OS4_CB3_CS3_TR
Gain: $ -3.34 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB3_CS3_AV
Gain: $ -9.79 Win %: 0 in 2 days with algo TB1_PL_QM_OB4_OS4_CB3_CS3_VI
Gain: $ -8.64 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB3_CS3_AL
Gain: $ -20.78 Win %: 0 in 2 days with algo TB1_PL_QM_OB4_OS4_CB3_CS3_LI
Gain: $ -47.96 Win %: 0 in 2 days with algo TB1_PL_QM_OB4_OS4_CB3_CS3_QP
Gain: $ -24.88 Win %: 0 in 2 days with algo TB1_PL_QM_OB4_OS4_CB3_CS3_HM
Gain: $ -5.39 Win %: 0 in 2 days with algo TB1_PL_QM_OB4_OS4_CB3_CS3_SS
Gain: $ -0.9 Win %: 0 in 2 days with algo TB1_PL_QM_OB4_OS4_CB3_CS3_QL
Gain: $ -24.67 Win %: 0 in 2 days with algo TB1_PL_QM_OB4_OS4_CB3_CS3_DB30
Gain: $ -7.71 Win %: 0 in 2 days with algo TB1_PL_QM_OB4_OS4_CB3_CS3_TR_IR5
Gain: $ -18.22 Win %: 0 in 2 days with algo TB1_PL_QM_OB4_OS4_CB3_CS3_TR_QP
Gain: $ -42.18 Win %: 0 in 2 days with algo TB1_PL_QM_OB4_OS4_CB3_CS3_QP_IR5
Gain: $ -7.78 Win %: 0 in 2 days with algo TB1_PL_QM_OB4_OS4_CB3_CS3_RV_TR
Gain: $ 0 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB3_CS3_RV_TR_DB
Gain: $ -3.34 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB3_CS3_RV_AV
Gain: $ -8.64 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB3_CS3_RV_AL
Gain: $ -47.96 Win %: 0 in 2 days with algo TB1_PL_QM_OB4_OS4_CB3_CS3_RV_QP
Gain: $ -6.75 Win %: 0 in 2 days with algo TB1_PL_QM_OB4_OS4_CB3_CS3_HM_TR
Gain: $ -3.55 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB3_CS3_HM_AV
Gain: $ -48.42 Win %: 0 in 2 days with algo TB1_PL_QM_OB4_OS4_CB3_CS3_HM_QP
Gain: $ -5.64 Win %: 50.00 in 2 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_RV
Gain: $ -20.08 Win %: 0 in 2 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_IR5
Gain: $ -4.34 Win %: 0 in 2 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_TR
Gain: $ -6.11 Win %: 0 in 2 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_AV
Gain: $ -1.55 Win %: 50.00 in 2 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_VI
Gain: $ -12.48 Win %: 0 in 2 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_AL
Gain: $ -4.22 Win %: 50.00 in 2 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_LI
Gain: $ -32.89 Win %: 0 in 2 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_QP
Gain: $ -5.64 Win %: 50.00 in 2 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_HM
Gain: $ -20.91 Win %: 0 in 2 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_SS
Gain: $ -1.05 Win %: 0 in 2 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_QL
Gain: $ -5.64 Win %: 50.00 in 2 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_DB8
Gain: $ -5.11 Win %: 0 in 2 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_TR_IR5
Gain: $ -8.82 Win %: 0 in 2 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_TR_QP
Gain: $ -24.71 Win %: 0 in 2 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_QP_IR5
Gain: $ -4.17 Win %: 0 in 2 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_RV_TR
Gain: $ 0 Win %: 100.00 in 2 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_RV_TR_DB
Gain: $ -5.34 Win %: 0 in 2 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_RV_AV
Gain: $ -12.59 Win %: 0 in 2 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_RV_AL
Gain: $ -33.08 Win %: 0 in 2 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_RV_QP
Gain: $ -4.34 Win %: 0 in 2 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_HM_TR
Gain: $ -6.11 Win %: 0 in 2 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_HM_AV
Gain: $ -32.89 Win %: 0 in 2 days with algo TB4_PL_QM_OB5_OS5_CB1_CS1_HM_QP
Gain: $ -4.15 Win %: 0 in 2 days with algo TB1_HL_HI_QM_OB1_OS1_CB4_CS4_RV
Gain: $ -1.31 Win %: 50.00 in 2 days with algo TB1_HL_HI_QM_OB1_OS1_CB4_CS4_IR5
Gain: $ -1.39 Win %: 50.00 in 2 days with algo TB1_HL_HI_QM_OB1_OS1_CB4_CS4_TR
Gain: $ -0.58 Win %: 50.00 in 2 days with algo TB1_HL_HI_QM_OB1_OS1_CB4_CS4_AV
Gain: $ -2.07 Win %: 50.00 in 2 days with algo TB1_HL_HI_QM_OB1_OS1_CB4_CS4_VI
Gain: $ -1.01 Win %: 50.00 in 2 days with algo TB1_HL_HI_QM_OB1_OS1_CB4_CS4_AL
Gain: $ -1.56 Win %: 50.00 in 2 days with algo TB1_HL_HI_QM_OB1_OS1_CB4_CS4_LI
Gain: $ -7.24 Win %: 50.00 in 2 days with algo TB1_HL_HI_QM_OB1_OS1_CB4_CS4_QP
Gain: $ 0.85 Win %: 100.00 in 2 days with algo TB1_HL_HI_QM_OB1_OS1_CB4_CS4_HM
Gain: $ -2.14 Win %: 50.00 in 2 days with algo TB1_HL_HI_QM_OB1_OS1_CB4_CS4_SS
Gain: $ -1.05 Win %: 50.00 in 2 days with algo TB1_HL_HI_QM_OB1_OS1_CB4_CS4_QL
Gain: $ -3.05 Win %: 50.00 in 2 days with algo TB1_HL_HI_QM_OB1_OS1_CB4_CS4_DB30
Gain: $ -1.31 Win %: 50.00 in 2 days with algo TB1_HL_HI_QM_OB1_OS1_CB4_CS4_TR_IR5
Gain: $ -4.27 Win %: 0 in 2 days with algo TB1_HL_HI_QM_OB1_OS1_CB4_CS4_TR_QP
Gain: $ -2.32 Win %: 50.00 in 2 days with algo TB1_HL_HI_QM_OB1_OS1_CB4_CS4_QP_IR5
Gain: $ -1.89 Win %: 50.00 in 2 days with algo TB1_HL_HI_QM_OB1_OS1_CB4_CS4_RV_TR
Gain: $ 0 Win %: 100.00 in 2 days with algo TB1_HL_HI_QM_OB1_OS1_CB4_CS4_RV_TR_DB
Gain: $ -1.56 Win %: 50.00 in 2 days with algo TB1_HL_HI_QM_OB1_OS1_CB4_CS4_RV_AV
Gain: $ -2.17 Win %: 50.00 in 2 days with algo TB1_HL_HI_QM_OB1_OS1_CB4_CS4_RV_AL
Gain: $ -9.21 Win %: 0 in 2 days with algo TB1_HL_HI_QM_OB1_OS1_CB4_CS4_RV_QP
Gain: $ 0.85 Win %: 100.00 in 2 days with algo TB1_HL_HI_QM_OB1_OS1_CB4_CS4_HM_TR
Gain: $ 0.85 Win %: 100.00 in 2 days with algo TB1_HL_HI_QM_OB1_OS1_CB4_CS4_HM_AV
Gain: $ -8.06 Win %: 0 in 2 days with algo TB1_HL_HI_QM_OB1_OS1_CB4_CS4_HM_QP
Gain: $ -7.5 Win %: 50.00 in 2 days with algo TB3_PL_QM_OB4_OS4_CB1_CS1_RV
Gain: $ -6.36 Win %: 50.00 in 2 days with algo TB3_PL_QM_OB4_OS4_CB1_CS1_IR5
Gain: $ -5.26 Win %: 0 in 2 days with algo TB3_PL_QM_OB4_OS4_CB1_CS1_TR
Gain: $ -6.14 Win %: 0 in 2 days with algo TB3_PL_QM_OB4_OS4_CB1_CS1_AV
Gain: $ -2.14 Win %: 50.00 in 2 days with algo TB3_PL_QM_OB4_OS4_CB1_CS1_VI
Gain: $ -15.42 Win %: 0 in 2 days with algo TB3_PL_QM_OB4_OS4_CB1_CS1_AL
Gain: $ -16.75 Win %: 0 in 2 days with algo TB3_PL_QM_OB4_OS4_CB1_CS1_LI
Gain: $ -40.15 Win %: 0 in 2 days with algo TB3_PL_QM_OB4_OS4_CB1_CS1_QP
Gain: $ -7.5 Win %: 50.00 in 2 days with algo TB3_PL_QM_OB4_OS4_CB1_CS1_HM
Gain: $ -7.77 Win %: 50.00 in 2 days with algo TB3_PL_QM_OB4_OS4_CB1_CS1_SS
Gain: $ -9.3 Win %: 0 in 2 days with algo TB3_PL_QM_OB4_OS4_CB1_CS1_QL
Gain: $ -7.5 Win %: 50.00 in 2 days with algo TB3_PL_QM_OB4_OS4_CB1_CS1_DB10
Gain: $ -9.71 Win %: 0 in 2 days with algo TB3_PL_QM_OB4_OS4_CB1_CS1_TR_IR5
Gain: $ -10.6 Win %: 0 in 2 days with algo TB3_PL_QM_OB4_OS4_CB1_CS1_TR_QP
Gain: $ -30.56 Win %: 0 in 2 days with algo TB3_PL_QM_OB4_OS4_CB1_CS1_QP_IR5
Gain: $ -5.26 Win %: 0 in 2 days with algo TB3_PL_QM_OB4_OS4_CB1_CS1_RV_TR
Gain: $ 0 Win %: 100.00 in 2 days with algo TB3_PL_QM_OB4_OS4_CB1_CS1_RV_TR_DB
Gain: $ -9.18 Win %: 0 in 2 days with algo TB3_PL_QM_OB4_OS4_CB1_CS1_RV_AV
Gain: $ -15.42 Win %: 0 in 2 days with algo TB3_PL_QM_OB4_OS4_CB1_CS1_RV_AL
Gain: $ -32.99 Win %: 0 in 2 days with algo TB3_PL_QM_OB4_OS4_CB1_CS1_RV_QP
Gain: $ -8.47 Win %: 0 in 2 days with algo TB3_PL_QM_OB4_OS4_CB1_CS1_HM_TR
Gain: $ -6.14 Win %: 0 in 2 days with algo TB3_PL_QM_OB4_OS4_CB1_CS1_HM_AV
Gain: $ -34.18 Win %: 0 in 2 days with algo TB3_PL_QM_OB4_OS4_CB1_CS1_HM_QP
Gain: $ -34.18 Win %: 0 in 2 days with algo TB3_PL_QM_OB4_OS4_CB1_CS1_HM_QP
Gain: $ -0.42 Win %: 33.00 in 3 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5
Gain: $ 0.13 Win %: 66.00 in 3 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_RV
Gain: $ -0.74 Win %: 66.00 in 3 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_IR5
Gain: $ -0.42 Win %: 33.00 in 3 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_TR
Gain: $ -0.42 Win %: 33.00 in 3 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_AV
Gain: $ -1.37 Win %: 66.00 in 3 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_VI
Gain: $ -0.42 Win %: 33.00 in 3 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_AL
Gain: $ -0.15 Win %: 66.00 in 3 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_LI
Gain: $ -3.12 Win %: 33.00 in 3 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_QP
Gain: $ -0.42 Win %: 33.00 in 3 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_HM
Gain: $ -0.42 Win %: 33.00 in 3 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_SS
Gain: $ -0.42 Win %: 33.00 in 3 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_QL
Gain: $ -0.42 Win %: 33.00 in 3 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_DB6
Gain: $ -0.56 Win %: 66.00 in 3 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_TR_IR5
Gain: $ -3.12 Win %: 33.00 in 3 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_TR_QP
Gain: $ -0.89 Win %: 33.00 in 3 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_QP_IR5
Gain: $ 0.12 Win %: 66.00 in 3 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_RV_TR
Gain: $ 0 Win %: 100.00 in 3 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_RV_TR_DB
Gain: $ -2.55 Win %: 33.00 in 3 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_RV_AV
Gain: $ -0.13 Win %: 66.00 in 3 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_RV_AL
Gain: $ -2.75 Win %: 33.00 in 3 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_RV_QP
Gain: $ -0.42 Win %: 33.00 in 3 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_HM_TR
Gain: $ -0.42 Win %: 33.00 in 3 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_HM_AV
Gain: $ -3.12 Win %: 33.00 in 3 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_HM_QP
Gain: $ -6.34 Win %: 0 in 3 days with algo TB5_OO_QM_OB3_OS3_CB3_CS3_RV
Gain: $ -0.74 Win %: 66.00 in 3 days with algo TB5_OO_QM_OB3_OS3_CB3_CS3_IR5
Gain: $ -2.63 Win %: 0 in 3 days with algo TB5_OO_QM_OB3_OS3_CB3_CS3_TR
Gain: $ -2.21 Win %: 0 in 3 days with algo TB5_OO_QM_OB3_OS3_CB3_CS3_AV
Gain: $ -3.52 Win %: 0 in 3 days with algo TB5_OO_QM_OB3_OS3_CB3_CS3_VI
Gain: $ -3.3 Win %: 0 in 3 days with algo TB5_OO_QM_OB3_OS3_CB3_CS3_AL
Gain: $ -4.16 Win %: 0 in 3 days with algo TB5_OO_QM_OB3_OS3_CB3_CS3_LI
Gain: $ -14.7 Win %: 0 in 3 days with algo TB5_OO_QM_OB3_OS3_CB3_CS3_QP
Gain: $ -6.39 Win %: 0 in 3 days with algo TB5_OO_QM_OB3_OS3_CB3_CS3_HM
Gain: $ -6.25 Win %: 0 in 3 days with algo TB5_OO_QM_OB3_OS3_CB3_CS3_SS
Gain: $ -1.57 Win %: 0 in 3 days with algo TB5_OO_QM_OB3_OS3_CB3_CS3_QL
Gain: $ -6.39 Win %: 0 in 3 days with algo TB5_OO_QM_OB3_OS3_CB3_CS3_DB6
Gain: $ -0.56 Win %: 66.00 in 3 days with algo TB5_OO_QM_OB3_OS3_CB3_CS3_TR_IR5
Gain: $ -6.52 Win %: 66.00 in 3 days with algo TB5_OO_QM_OB3_OS3_CB3_CS3_TR_QP
Gain: $ -0.89 Win %: 33.00 in 3 days with algo TB5_OO_QM_OB3_OS3_CB3_CS3_QP_IR5
Gain: $ -2.42 Win %: 0 in 3 days with algo TB5_OO_QM_OB3_OS3_CB3_CS3_RV_TR
Gain: $ 0 Win %: 100.00 in 3 days with algo TB5_OO_QM_OB3_OS3_CB3_CS3_RV_TR_DB
Gain: $ -3.78 Win %: 0 in 3 days with algo TB5_OO_QM_OB3_OS3_CB3_CS3_RV_AV
Gain: $ -3.27 Win %: 0 in 3 days with algo TB5_OO_QM_OB3_OS3_CB3_CS3_RV_AL
Gain: $ -14.63 Win %: 0 in 3 days with algo TB5_OO_QM_OB3_OS3_CB3_CS3_RV_QP
Gain: $ -2.63 Win %: 0 in 3 days with algo TB5_OO_QM_OB3_OS3_CB3_CS3_HM_TR
Gain: $ -2.21 Win %: 0 in 3 days with algo TB5_OO_QM_OB3_OS3_CB3_CS3_HM_AV
Gain: $ -14.7 Win %: 0 in 3 days with algo TB5_OO_QM_OB3_OS3_CB3_CS3_HM_QP
Gain: $ 0.13 Win %: 66.00 in 3 days with algo TB5_OC_QM_OB5_OS5_CB1_CS1_RV
Gain: $ -1.1 Win %: 66.00 in 3 days with algo TB5_OC_QM_OB5_OS5_CB1_CS1_IR5
Gain: $ -0.42 Win %: 33.00 in 3 days with algo TB5_OC_QM_OB5_OS5_CB1_CS1_TR
Gain: $ -0.42 Win %: 33.00 in 3 days with algo TB5_OC_QM_OB5_OS5_CB1_CS1_AV
Gain: $ -1.37 Win %: 66.00 in 3 days with algo TB5_OC_QM_OB5_OS5_CB1_CS1_VI
Gain: $ -0.42 Win %: 33.00 in 3 days with algo TB5_OC_QM_OB5_OS5_CB1_CS1_AL
Gain: $ -0.15 Win %: 66.00 in 3 days with algo TB5_OC_QM_OB5_OS5_CB1_CS1_LI
Gain: $ -3.12 Win %: 33.00 in 3 days with algo TB5_OC_QM_OB5_OS5_CB1_CS1_QP
Gain: $ -0.42 Win %: 33.00 in 3 days with algo TB5_OC_QM_OB5_OS5_CB1_CS1_HM
Gain: $ -0.42 Win %: 33.00 in 3 days with algo TB5_OC_QM_OB5_OS5_CB1_CS1_SS
Gain: $ -0.42 Win %: 33.00 in 3 days with algo TB5_OC_QM_OB5_OS5_CB1_CS1_QL
Gain: $ -0.42 Win %: 33.00 in 3 days with algo TB5_OC_QM_OB5_OS5_CB1_CS1_DB6
Gain: $ -0.38 Win %: 66.00 in 3 days with algo TB5_OC_QM_OB5_OS5_CB1_CS1_TR_IR5
Gain: $ -3.12 Win %: 33.00 in 3 days with algo TB5_OC_QM_OB5_OS5_CB1_CS1_TR_QP
Gain: $ -2.92 Win %: 33.00 in 3 days with algo TB5_OC_QM_OB5_OS5_CB1_CS1_QP_IR5
Gain: $ 0.12 Win %: 66.00 in 3 days with algo TB5_OC_QM_OB5_OS5_CB1_CS1_RV_TR
Gain: $ 0 Win %: 100.00 in 3 days with algo TB5_OC_QM_OB5_OS5_CB1_CS1_RV_TR_DB
Gain: $ -2.55 Win %: 33.00 in 3 days with algo TB5_OC_QM_OB5_OS5_CB1_CS1_RV_AV
Gain: $ -0.13 Win %: 66.00 in 3 days with algo TB5_OC_QM_OB5_OS5_CB1_CS1_RV_AL
Gain: $ -2.75 Win %: 33.00 in 3 days with algo TB5_OC_QM_OB5_OS5_CB1_CS1_RV_QP
Gain: $ -0.42 Win %: 33.00 in 3 days with algo TB5_OC_QM_OB5_OS5_CB1_CS1_HM_TR
Gain: $ -0.42 Win %: 33.00 in 3 days with algo TB5_OC_QM_OB5_OS5_CB1_CS1_HM_AV
Gain: $ -3.12 Win %: 33.00 in 3 days with algo TB5_OC_QM_OB5_OS5_CB1_CS1_HM_QP
Gain: $ 0.13 Win %: 66.00 in 3 days with algo TB5_OC_QM_OB2_OS2_CB5_CS5_RV
Gain: $ -1.1 Win %: 66.00 in 3 days with algo TB5_OC_QM_OB2_OS2_CB5_CS5_IR5
Gain: $ -0.42 Win %: 33.00 in 3 days with algo TB5_OC_QM_OB2_OS2_CB5_CS5_TR
Gain: $ -0.42 Win %: 33.00 in 3 days with algo TB5_OC_QM_OB2_OS2_CB5_CS5_AV
Gain: $ -1.37 Win %: 66.00 in 3 days with algo TB5_OC_QM_OB2_OS2_CB5_CS5_VI
Gain: $ -0.42 Win %: 33.00 in 3 days with algo TB5_OC_QM_OB2_OS2_CB5_CS5_AL
Gain: $ -0.15 Win %: 66.00 in 3 days with algo TB5_OC_QM_OB2_OS2_CB5_CS5_LI
Gain: $ -3.12 Win %: 33.00 in 3 days with algo TB5_OC_QM_OB2_OS2_CB5_CS5_QP
Gain: $ -0.42 Win %: 33.00 in 3 days with algo TB5_OC_QM_OB2_OS2_CB5_CS5_HM
Gain: $ -0.42 Win %: 33.00 in 3 days with algo TB5_OC_QM_OB2_OS2_CB5_CS5_SS
Gain: $ -0.42 Win %: 33.00 in 3 days with algo TB5_OC_QM_OB2_OS2_CB5_CS5_QL
Gain: $ -0.42 Win %: 33.00 in 3 days with algo TB5_OC_QM_OB2_OS2_CB5_CS5_DB6
Gain: $ -0.38 Win %: 66.00 in 3 days with algo TB5_OC_QM_OB2_OS2_CB5_CS5_TR_IR5
Gain: $ -3.12 Win %: 33.00 in 3 days with algo TB5_OC_QM_OB2_OS2_CB5_CS5_TR_QP
Gain: $ -2.92 Win %: 33.00 in 3 days with algo TB5_OC_QM_OB2_OS2_CB5_CS5_QP_IR5
Gain: $ 0.12 Win %: 66.00 in 3 days with algo TB5_OC_QM_OB2_OS2_CB5_CS5_RV_TR
Gain: $ -0.39 Win %: 66.00 in 3 days with algo TB5_OC_QM_OB2_OS2_CB5_CS5_RV_TR_DB
Gain: $ -2.55 Win %: 33.00 in 3 days with algo TB5_OC_QM_OB2_OS2_CB5_CS5_RV_AV
Gain: $ 0.91 Win %: 100.00 in 3 days with algo TB5_OC_QM_OB2_OS2_CB5_CS5_RV_AL
Gain: $ -2.75 Win %: 33.00 in 3 days with algo TB5_OC_QM_OB2_OS2_CB5_CS5_RV_QP
Gain: $ -0.42 Win %: 33.00 in 3 days with algo TB5_OC_QM_OB2_OS2_CB5_CS5_HM_TR
Gain: $ -0.42 Win %: 33.00 in 3 days with algo TB5_OC_QM_OB2_OS2_CB5_CS5_HM_AV
Gain: $ -3.12 Win %: 33.00 in 3 days with algo TB5_OC_QM_OB2_OS2_CB5_CS5_HM_QP
