FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4
FFHL Gain: $ -5.1 Win %: 0 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4_TR_QP_DB10
FFHL Gain: $ -2.79 Win %: 0 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4_RV_TR_DB10
FFHL Gain: $ -2.79 Win %: 0 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4_RV_TR_DB10
FFHL Gain: $ -3.31 Win %: 0 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4_RV_AV_DB10
FFHL Gain: $ -2.13 Win %: 0 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4_RV_AL_DB10
FFHL Gain: $ -5.69 Win %: 0 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4_RV_QP_DB10
FFHL Gain: $ -2.79 Win %: 0 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4_HM_TR_DB10
FFHL Gain: $ -3.31 Win %: 0 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4_HM_AV_DB10
FFHL Gain: $ -5.69 Win %: 0 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4_HM_QP_DB10
FFHL Gain: $ -0.7 Win %: 0 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4_IT_QL_DB10
FFHL Gain: $ -1.06 Win %: 50.00 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4_IT_QP_DB10
FFHL Gain: $ -0.12 Win %: 50.00 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4_TR_IR3
FFHL Gain: $ -5.7 Win %: 0 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4_TR_QP
FFHL Gain: $ -4.51 Win %: 0 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4_QP_IR3
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4_RV_TR
FFHL Gain: $ -1.84 Win %: 50.00 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4_RV_AV
FFHL Gain: $ -0.66 Win %: 50.00 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4_RV_AL
FFHL Gain: $ -5.93 Win %: 0 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4_RV_QP
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4_HM_TR
FFHL Gain: $ -1.84 Win %: 50.00 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4_HM_AV
FFHL Gain: $ -5.93 Win %: 0 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4_HM_QP
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4_IT_QL
FFHL Gain: $ -5.93 Win %: 0 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4_IT_QP
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4_AO_AC
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4_RV
FFHL Gain: $ -0.12 Win %: 50.00 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4_IR3
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4_TR
FFHL Gain: $ -1.84 Win %: 50.00 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4_AV
FFHL Gain: $ -0.66 Win %: 50.00 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4_AL
FFHL Gain: $ -3.41 Win %: 0 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4_VI
FFHL Gain: $ -0.22 Win %: 50.00 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4_LI
FFHL Gain: $ -5.93 Win %: 0 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4_QP
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4_HM
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4_SS
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4_QL
FFHL Gain: $ -2.79 Win %: 0 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4_DB10
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4_AO
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4_AC
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_HS_QM_OB2_OS2_CB4_CS4_IT
FFHL Gain: $ -5.1 Win %: 0 in 2 days with algo TB3_HS_QM_OB1_OS1_CB4_CS4_TR_QP_DB10
FFHL Gain: $ -2.79 Win %: 0 in 2 days with algo TB3_HS_QM_OB1_OS1_CB4_CS4_RV_TR_DB10
FFHL Gain: $ -2.79 Win %: 0 in 2 days with algo TB3_HS_QM_OB1_OS1_CB4_CS4_RV_TR_DB10
FFHL Gain: $ -3.31 Win %: 0 in 2 days with algo TB3_HS_QM_OB1_OS1_CB4_CS4_RV_AV_DB10
FFHL Gain: $ -2.13 Win %: 0 in 2 days with algo TB3_HS_QM_OB1_OS1_CB4_CS4_RV_AL_DB10
FFHL Gain: $ -5.69 Win %: 0 in 2 days with algo TB3_HS_QM_OB1_OS1_CB4_CS4_RV_QP_DB10
FFHL Gain: $ -2.79 Win %: 0 in 2 days with algo TB3_HS_QM_OB1_OS1_CB4_CS4_HM_TR_DB10
FFHL Gain: $ -3.31 Win %: 0 in 2 days with algo TB3_HS_QM_OB1_OS1_CB4_CS4_HM_AV_DB10
FFHL Gain: $ -5.69 Win %: 0 in 2 days with algo TB3_HS_QM_OB1_OS1_CB4_CS4_HM_QP_DB10
FFHL Gain: $ -0.7 Win %: 0 in 2 days with algo TB3_HS_QM_OB1_OS1_CB4_CS4_IT_QL_DB10
FFHL Gain: $ -1.06 Win %: 50.00 in 2 days with algo TB3_HS_QM_OB1_OS1_CB4_CS4_IT_QP_DB10
FFHL Gain: $ -0.12 Win %: 50.00 in 2 days with algo TB3_HS_QM_OB1_OS1_CB4_CS4_TR_IR3
FFHL Gain: $ -5.7 Win %: 0 in 2 days with algo TB3_HS_QM_OB1_OS1_CB4_CS4_TR_QP
FFHL Gain: $ -4.51 Win %: 0 in 2 days with algo TB3_HS_QM_OB1_OS1_CB4_CS4_QP_IR3
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_HS_QM_OB1_OS1_CB4_CS4_RV_TR
FFHL Gain: $ -1.84 Win %: 50.00 in 2 days with algo TB3_HS_QM_OB1_OS1_CB4_CS4_RV_AV
FFHL Gain: $ -0.66 Win %: 50.00 in 2 days with algo TB3_HS_QM_OB1_OS1_CB4_CS4_RV_AL
FFHL Gain: $ -5.93 Win %: 0 in 2 days with algo TB3_HS_QM_OB1_OS1_CB4_CS4_RV_QP
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_HS_QM_OB1_OS1_CB4_CS4_HM_TR
FFHL Gain: $ -1.84 Win %: 50.00 in 2 days with algo TB3_HS_QM_OB1_OS1_CB4_CS4_HM_AV
FFHL Gain: $ -5.93 Win %: 0 in 2 days with algo TB3_HS_QM_OB1_OS1_CB4_CS4_HM_QP
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_HS_QM_OB1_OS1_CB4_CS4_IT_QL
FFHL Gain: $ -5.93 Win %: 0 in 2 days with algo TB3_HS_QM_OB1_OS1_CB4_CS4_IT_QP
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_HS_QM_OB1_OS1_CB4_CS4_AO_AC
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_HS_QM_OB1_OS1_CB4_CS4_RV
FFHL Gain: $ -0.12 Win %: 50.00 in 2 days with algo TB3_HS_QM_OB1_OS1_CB4_CS4_IR3
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_HS_QM_OB1_OS1_CB4_CS4_TR
FFHL Gain: $ -1.84 Win %: 50.00 in 2 days with algo TB3_HS_QM_OB1_OS1_CB4_CS4_AV
FFHL Gain: $ -0.66 Win %: 50.00 in 2 days with algo TB3_HS_QM_OB1_OS1_CB4_CS4_AL
FFHL Gain: $ -3.41 Win %: 0 in 2 days with algo TB3_HS_QM_OB1_OS1_CB4_CS4_VI
FFHL Gain: $ -0.22 Win %: 50.00 in 2 days with algo TB3_HS_QM_OB1_OS1_CB4_CS4_LI
FFHL Gain: $ -5.93 Win %: 0 in 2 days with algo TB3_HS_QM_OB1_OS1_CB4_CS4_QP
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_HS_QM_OB1_OS1_CB4_CS4_HM
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_HS_QM_OB1_OS1_CB4_CS4_SS
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_HS_QM_OB1_OS1_CB4_CS4_QL
FFHL Gain: $ -2.79 Win %: 0 in 2 days with algo TB3_HS_QM_OB1_OS1_CB4_CS4_DB10
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_HS_QM_OB1_OS1_CB4_CS4_AO
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_HS_QM_OB1_OS1_CB4_CS4_AC
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_HS_QM_OB1_OS1_CB4_CS4_IT
FFHL Gain: $ -3.77 Win %: 0 in 2 days with algo TB3_EO_EC_QM_OB2_OS2_CB4_CS4_TR_QP_DB10
FFHL Gain: $ -3.02 Win %: 0 in 2 days with algo TB3_EO_EC_QM_OB2_OS2_CB4_CS4_RV_TR_DB10
FFHL Gain: $ -3.02 Win %: 0 in 2 days with algo TB3_EO_EC_QM_OB2_OS2_CB4_CS4_RV_TR_DB10
FFHL Gain: $ -2.81 Win %: 0 in 2 days with algo TB3_EO_EC_QM_OB2_OS2_CB4_CS4_RV_AV_DB10
FFHL Gain: $ -2.25 Win %: 0 in 2 days with algo TB3_EO_EC_QM_OB2_OS2_CB4_CS4_RV_AL_DB10
FFHL Gain: $ -4.04 Win %: 0 in 2 days with algo TB3_EO_EC_QM_OB2_OS2_CB4_CS4_RV_QP_DB10
FFHL Gain: $ -3.02 Win %: 0 in 2 days with algo TB3_EO_EC_QM_OB2_OS2_CB4_CS4_HM_TR_DB10
FFHL Gain: $ -2.81 Win %: 0 in 2 days with algo TB3_EO_EC_QM_OB2_OS2_CB4_CS4_HM_AV_DB10
FFHL Gain: $ -4.04 Win %: 0 in 2 days with algo TB3_EO_EC_QM_OB2_OS2_CB4_CS4_HM_QP_DB10
FFHL Gain: $ -0.75 Win %: 0 in 2 days with algo TB3_EO_EC_QM_OB2_OS2_CB4_CS4_IT_QL_DB10
FFHL Gain: $ -4.04 Win %: 0 in 2 days with algo TB3_EO_EC_QM_OB2_OS2_CB4_CS4_IT_QP_DB10
FFHL Gain: $ -0.12 Win %: 50.00 in 2 days with algo TB3_EO_EC_QM_OB2_OS2_CB4_CS4_TR_IR3
FFHL Gain: $ -3.67 Win %: 0 in 2 days with algo TB3_EO_EC_QM_OB2_OS2_CB4_CS4_TR_QP
FFHL Gain: $ -3.45 Win %: 0 in 2 days with algo TB3_EO_EC_QM_OB2_OS2_CB4_CS4_QP_IR3
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_EO_EC_QM_OB2_OS2_CB4_CS4_RV_TR
FFHL Gain: $ -1.34 Win %: 50.00 in 2 days with algo TB3_EO_EC_QM_OB2_OS2_CB4_CS4_RV_AV
FFHL Gain: $ -0.78 Win %: 50.00 in 2 days with algo TB3_EO_EC_QM_OB2_OS2_CB4_CS4_RV_AL
FFHL Gain: $ -4.25 Win %: 0 in 2 days with algo TB3_EO_EC_QM_OB2_OS2_CB4_CS4_RV_QP
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_EO_EC_QM_OB2_OS2_CB4_CS4_HM_TR
FFHL Gain: $ -1.34 Win %: 50.00 in 2 days with algo TB3_EO_EC_QM_OB2_OS2_CB4_CS4_HM_AV
FFHL Gain: $ -3.58 Win %: 0 in 2 days with algo TB3_EO_EC_QM_OB2_OS2_CB4_CS4_HM_QP
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_EO_EC_QM_OB2_OS2_CB4_CS4_IT_QL
FFHL Gain: $ -4.25 Win %: 0 in 2 days with algo TB3_EO_EC_QM_OB2_OS2_CB4_CS4_IT_QP
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_EO_EC_QM_OB2_OS2_CB4_CS4_AO_AC
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_EO_EC_QM_OB2_OS2_CB4_CS4_RV
FFHL Gain: $ -0.12 Win %: 50.00 in 2 days with algo TB3_EO_EC_QM_OB2_OS2_CB4_CS4_IR3
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_EO_EC_QM_OB2_OS2_CB4_CS4_TR
FFHL Gain: $ -1.34 Win %: 50.00 in 2 days with algo TB3_EO_EC_QM_OB2_OS2_CB4_CS4_AV
FFHL Gain: $ -0.78 Win %: 50.00 in 2 days with algo TB3_EO_EC_QM_OB2_OS2_CB4_CS4_AL
FFHL Gain: $ -2.37 Win %: 0 in 2 days with algo TB3_EO_EC_QM_OB2_OS2_CB4_CS4_VI
FFHL Gain: $ -0.22 Win %: 50.00 in 2 days with algo TB3_EO_EC_QM_OB2_OS2_CB4_CS4_LI
FFHL Gain: $ -4.25 Win %: 0 in 2 days with algo TB3_EO_EC_QM_OB2_OS2_CB4_CS4_QP
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_EO_EC_QM_OB2_OS2_CB4_CS4_HM
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_EO_EC_QM_OB2_OS2_CB4_CS4_SS
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_EO_EC_QM_OB2_OS2_CB4_CS4_QL
FFHL Gain: $ -3.02 Win %: 0 in 2 days with algo TB3_EO_EC_QM_OB2_OS2_CB4_CS4_DB10
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_EO_EC_QM_OB2_OS2_CB4_CS4_AO
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_EO_EC_QM_OB2_OS2_CB4_CS4_AC
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_EO_EC_QM_OB2_OS2_CB4_CS4_IT
FFHL Gain: $ -3.77 Win %: 0 in 2 days with algo TB3_EO_EC_QM_OB1_OS1_CB4_CS4_TR_QP_DB10
FFHL Gain: $ -3.02 Win %: 0 in 2 days with algo TB3_EO_EC_QM_OB1_OS1_CB4_CS4_RV_TR_DB10
FFHL Gain: $ -3.02 Win %: 0 in 2 days with algo TB3_EO_EC_QM_OB1_OS1_CB4_CS4_RV_TR_DB10
FFHL Gain: $ -2.81 Win %: 0 in 2 days with algo TB3_EO_EC_QM_OB1_OS1_CB4_CS4_RV_AV_DB10
FFHL Gain: $ -2.25 Win %: 0 in 2 days with algo TB3_EO_EC_QM_OB1_OS1_CB4_CS4_RV_AL_DB10
FFHL Gain: $ -4.04 Win %: 0 in 2 days with algo TB3_EO_EC_QM_OB1_OS1_CB4_CS4_RV_QP_DB10
FFHL Gain: $ -3.02 Win %: 0 in 2 days with algo TB3_EO_EC_QM_OB1_OS1_CB4_CS4_HM_TR_DB10
FFHL Gain: $ -2.81 Win %: 0 in 2 days with algo TB3_EO_EC_QM_OB1_OS1_CB4_CS4_HM_AV_DB10
FFHL Gain: $ -4.04 Win %: 0 in 2 days with algo TB3_EO_EC_QM_OB1_OS1_CB4_CS4_HM_QP_DB10
FFHL Gain: $ -0.75 Win %: 0 in 2 days with algo TB3_EO_EC_QM_OB1_OS1_CB4_CS4_IT_QL_DB10
FFHL Gain: $ -4.04 Win %: 0 in 2 days with algo TB3_EO_EC_QM_OB1_OS1_CB4_CS4_IT_QP_DB10
FFHL Gain: $ -0.12 Win %: 50.00 in 2 days with algo TB3_EO_EC_QM_OB1_OS1_CB4_CS4_TR_IR3
FFHL Gain: $ -3.67 Win %: 0 in 2 days with algo TB3_EO_EC_QM_OB1_OS1_CB4_CS4_TR_QP
FFHL Gain: $ -3.45 Win %: 0 in 2 days with algo TB3_EO_EC_QM_OB1_OS1_CB4_CS4_QP_IR3
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_EO_EC_QM_OB1_OS1_CB4_CS4_RV_TR
FFHL Gain: $ -1.34 Win %: 50.00 in 2 days with algo TB3_EO_EC_QM_OB1_OS1_CB4_CS4_RV_AV
FFHL Gain: $ -0.78 Win %: 50.00 in 2 days with algo TB3_EO_EC_QM_OB1_OS1_CB4_CS4_RV_AL
FFHL Gain: $ -4.25 Win %: 0 in 2 days with algo TB3_EO_EC_QM_OB1_OS1_CB4_CS4_RV_QP
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_EO_EC_QM_OB1_OS1_CB4_CS4_HM_TR
FFHL Gain: $ -1.34 Win %: 50.00 in 2 days with algo TB3_EO_EC_QM_OB1_OS1_CB4_CS4_HM_AV
FFHL Gain: $ -4.25 Win %: 0 in 2 days with algo TB3_EO_EC_QM_OB1_OS1_CB4_CS4_HM_QP
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_EO_EC_QM_OB1_OS1_CB4_CS4_IT_QL
FFHL Gain: $ -4.25 Win %: 0 in 2 days with algo TB3_EO_EC_QM_OB1_OS1_CB4_CS4_IT_QP
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_EO_EC_QM_OB1_OS1_CB4_CS4_AO_AC
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_EO_EC_QM_OB1_OS1_CB4_CS4_RV
FFHL Gain: $ -0.12 Win %: 50.00 in 2 days with algo TB3_EO_EC_QM_OB1_OS1_CB4_CS4_IR3
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_EO_EC_QM_OB1_OS1_CB4_CS4_TR
FFHL Gain: $ -1.34 Win %: 50.00 in 2 days with algo TB3_EO_EC_QM_OB1_OS1_CB4_CS4_AV
FFHL Gain: $ -0.78 Win %: 50.00 in 2 days with algo TB3_EO_EC_QM_OB1_OS1_CB4_CS4_AL
FFHL Gain: $ -2.37 Win %: 0 in 2 days with algo TB3_EO_EC_QM_OB1_OS1_CB4_CS4_VI
FFHL Gain: $ -0.22 Win %: 50.00 in 2 days with algo TB3_EO_EC_QM_OB1_OS1_CB4_CS4_LI
FFHL Gain: $ -4.25 Win %: 0 in 2 days with algo TB3_EO_EC_QM_OB1_OS1_CB4_CS4_QP
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_EO_EC_QM_OB1_OS1_CB4_CS4_HM
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_EO_EC_QM_OB1_OS1_CB4_CS4_SS
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_EO_EC_QM_OB1_OS1_CB4_CS4_QL
FFHL Gain: $ -3.02 Win %: 0 in 2 days with algo TB3_EO_EC_QM_OB1_OS1_CB4_CS4_DB10
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_EO_EC_QM_OB1_OS1_CB4_CS4_AO
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_EO_EC_QM_OB1_OS1_CB4_CS4_AC
FFHL Gain: $ 0.88 Win %: 100.00 in 2 days with algo TB3_EO_EC_QM_OB1_OS1_CB4_CS4_IT
